# deepseek-mpi

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
doc/: Doxyfile  Doxyfile.in  Makefile.am
docs/: README.md  SUMMARY.md  cli.md  configuration.md  documentation.md  gitbook.md  operations.md  quickstart.md
responses/: chunk-000000-r0.json
src/: Makefile.am  api_client.c  api_client.h  app_config.c  app_config.h  attachment_loader.c  attachment_loader.h  cli.c  cli.h  codex_wrapper  codex_wrapper.c  deepseek.h  deepseek_wrapper.c  file_loader.c  file_loader.h  input_chunker.c  input_chunker.h  logger.c  logger.h  main.c  readline_prompt.c  readline_prompt.h  string_buffer.c  string_buffer.h  tui.c  tui.h
tests/: Makefile.am
